Implement user login and registration system

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,8 +10,11 @@
     <div>
       Microblog: 
       <a href="{{ url_for('index') }}">Home</a>
-      <a href="{{ url_for('login') }}">Log in</a>
-    </div>
+      {% if current_user.is_anonymous %}
+        <a href="{{ url_for('login') }}">Log in</a>
+      {% else %}
+        <a href="{{ url_for('logout') }}">Log out</a>
+      {% endif %}
     <hr>
     {% with messages = get_flashed_messages() %}
       {% if messages %}
